--- a/config.json
+++ b/config.json
@@ -3,5 +3,7 @@
   "api_apikey": "your_api_key",
   "api_code": "your_code",
   "api_throttle_limit": 10,
-  "api_name": "MultiShock"
+  "api_name": "MultiShock",
+  "detection_threshold": 0.5,
+  "capture_delay": 500
 }
